viewchild and renderer

--- a/src/app/renderview/renderview.component.html
+++ b/src/app/renderview/renderview.component.html
@@ -2,7 +2,8 @@
     <p #para class="text-center">View Page of Styling App</p>
 </div>
 
-<button class="btn btn-outline" (click)="changeColor()">change</button>
+<button class="btn btn-outline" (click)="changeColor()">Change Color</button> &nbsp;
+<button class="btn btn-outline" (click)="changeText()">Change Text</button>
 
 <div class="mx-auto mt-10 w-[700px]">
     <app-child></app-child>
