child content renderer

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,5 +1,6 @@
 
 <div class="child w-[600px] flex bg-red-100 p-4 flex-col gap-5 ">
     <p class="text-xl robotFont">Current Value</p>
-    <button class="btn btn-warning bg-red-500 mr-auto">See</button>
+    <button class="btn btn-warning bg-red-500 mr-auto" (click)="addText()">See</button>
+    <ng-content></ng-content>
 </div>
