--- a/src/app/renderview/renderview.component.html
+++ b/src/app/renderview/renderview.component.html
@@ -1,10 +1,13 @@
-<div #box class="bg-red-400 p-2 text-black mb-10 text-xl w-[300px] mx-auto">
+<div #box class="bg-red-500 p-2 mt-2 text-black mb-10 text-xl w-[300px] mx-auto">
     <p #para class="text-center">View Page of Styling App</p>
 </div>
-
-<button class="btn btn-outline" (click)="changeColor()">Change Color</button> &nbsp;
-<button class="btn btn-outline" (click)="changeText()">Change Text</button>
+<div class="mx-auto w-[600px]">
+    <button class="btn btn-outline " (click)="changeColor()">Change Color</button> &nbsp;
+    <button class="btn btn-outline" (click)="changeText()">Change Text</button>
+</div>
 
 <div class="mx-auto mt-10 w-[700px]">
-    <app-child></app-child>
+    <app-child>
+        <p class="text-lg robotoFont" #childcont>This is the child paragraph</p>
+    </app-child>
 </div>
