--- a/src/app/renderview/renderview.component.html
+++ b/src/app/renderview/renderview.component.html
@@ -6,7 +6,7 @@
     <button class="btn btn-outline" (click)="changeText()">Change Text</button>
 </div>
 
-<div class="mx-auto mt-10 w-[700px]">
+<div class="mx-auto my-10 w-[700px]">
     <app-child>
         <p class="text-lg robotoFont" #childcont>This is the child paragraph</p>
     </app-child>
