hostlistener mouseover and mouseout

--- a/src/app/hostlisten/hostlisten.component.html
+++ b/src/app/hostlisten/hostlisten.component.html
@@ -1,1 +1,6 @@
-<p>hostlisten works!</p>
+<div appHostdirective class="flex rounded-lg shadow-lg flex-col gap-5 w-[600px] p-4 mx-auto bg-red-400 my-4">
+    <h2 class="robootFont text-2xl">This is the headingTwo</h2>
+    <button class="btn btn-outline ml-auto">change</button>
+</div>
+
+<div class="h-[200vh]"></div>
