dropdown bar component using ngClass

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <h2 class="text-2xl font-bold text-center">Dropdown Menu</h2>
 
-<div class="dropdown relative shadow-md mx-auto block w-[200px] px-3 py-1 border-2 mt-10">
+<app-dropdownbar></app-dropdownbar>
+<!-- <div class="dropdown relative shadow-md mx-auto block w-[200px] px-3 py-1 border-2 mt-10">
     <header class="robotoFont after:h-4 after:w-4 after:absolute after:right-3 after:border-l-2 after:border-b-slate-800  after:border-b-2 after:border-l-slate-800  after:-rotate-45">Dropdown</header>
     <div  [ngClass]="classes" class="content-dropdown  mt-4">
         <a class="p-2 block mt-2 border">Item</a>
@@ -8,4 +9,29 @@
         <a class="p-2 block mt-2 border">Item</a>
         <a class="p-2 block mt-2 mb-2 border">Item</a>
     </div>
-</div>
+</div> -->
+
+<!-- <div class="flex mt-10 justify-center">
+    <div class="mb-3 xl:w-96">
+      <select class="form-select appearance-none
+        block
+        w-full
+        px-3
+        py-1.5
+        text-base
+        font-normal
+        text-gray-700
+        bg-white bg-clip-padding bg-no-repeat
+        border border-solid border-gray-300
+        rounded
+        transition
+        ease-in-out
+        m-0
+        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+      </select>
+    </div>
+  </div> -->
